--- a/arch/arm64/configs/dragons_defconfig
+++ b/arch/arm64/configs/dragons_defconfig
@@ -351,8 +351,8 @@ CONFIG_MIGRATION=y
 CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_ZONE_DMA_FLAG=1
 CONFIG_BOUNCE=y
-# CONFIG_KSM is not set
-CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
+CONFIG_KSM=y
+CONFIG_UKSM=y
 CONFIG_CMA=y
 CONFIG_CMA_AREAS=7
 CONFIG_ZSMALLOC=y
@@ -2011,6 +2011,8 @@ CONFIG_PRINT_QUOTA_WARNING=y
 CONFIG_QUOTACTL=y
 # CONFIG_AUTOFS4_FS is not set
 CONFIG_FUSE_FS=y
+CONFIG_OVERLAY_FS=y
+CONFIG_F2FS_FS=y
 
 #
 # Caches
@@ -2025,6 +2027,7 @@ CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
+CONFIG_EXFAT_FS=y
 # CONFIG_NTFS_FS is not set
 
 #
